--- a/VideoTestForAndroid/res/layout/activity_main.xml
+++ b/VideoTestForAndroid/res/layout/activity_main.xml
@@ -15,6 +15,14 @@
         android:layout_height="wrap_content"
         android:text="@string/btn" />
     
+    <Button 
+        android:id="@+id/socketTestBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:text="@string/socketTestBtnText"/>
+    
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="200dip"
